Further code cleanup and README improvements.